--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
     width: 100%;
-    margin: 30px;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: antiquewhite;
 }
 .site-header {
